k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-devops-api
  namespace: cloud-devops

spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: cloud-devops-api

  template:
    metadata:
      labels:
        app: cloud-devops-api

    spec:
      containers:
        - name: api

          image: cloud-devops-api:1.1

          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 3000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /ready
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
