k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cloud-devops-api
  namespace: cloud-devops

spec:
  selector:
    app: cloud-devops-api

  ports:
    - port: 80
      targetPort: 3000

  type: ClusterIP
